@startuml ServicioIncentivos

title Servicio de Incentivos - DonaTrack (Entrega 2)


skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor #333333
    ArrowColor #333333
    HeaderBackgroundColor #5B6ABF
    HeaderFontColor White
    CardFontSize 30
}
skinparam package {
    BackgroundColor #F0F2FF
    BorderColor #5B6ABF
}
package "Perfil"{
    class ProgresoMision {
        - mision: Mision
        - progresoActual: double
        - fechaInicio: LocalDate
        - fechaCompletado: LocalDate
        - completada: boolean
        + actualizar(delta: double): void
        + reiniciar(): void
        + marcarCompletada(): void
    }

    class CategoriaDonante {
        -nombre:String
        -siguienteCategoria:Categoria
        -misiones:List[misiones]
    }
    class PerfilDonante {
        - donanteId: Long
        - categoria: CategoriaDonante
        - misionActual: ProgresoMision
        - insignias: List<Insignia>
        - historialMisiones: List<ProgresoMision>
        + totalDonacionesHistoricas(): int
        + totalOrganizacionesAyudadas(): int
        + getCategoria(): CategoriaDonante
        + getMisionActual(): Mision
        + getPorcentajeProgreso(): double
        + subirCategoria(): void
    }
    class RankingPerfil{
        -posicionesHistoricas:List[int]
        +getter/setter()
    }
}
package "Misiones" {

    abstract class Mision {
        - id: Long
        - nombre: String
        - descripcion: String
        - categoria: CategoriaDonante
        - orden: int
        - insignia: Insignia
        - ganadores: List<PerfileDonantes>
        + estaCompletada(progreso: ProgresoMision): boolean
        + calcularProgreso(): double
        + getObjetivo(): String
    }

    class MisionRacha {
        - mesesConsecutivosRequeridos: int
        + estaCompletada(progreso: ProgresoMision): boolean
        + calcularProgreso(): double
    }

    class MisionCompletitud {
        - categoriasDistintasRequeridas: int
        + estaCompletada(progreso: ProgresoMision): boolean
        + calcularProgreso(): double
    }

    class MisionHabilDonador {
        - cantidadBienesRequerida: int
        + estaCompletada(progreso: ProgresoMision): boolean
        + calcularProgreso(): double
    }

    class MisionDonacionesExitosas {
        - donacionesExitosasRequeridas: int
        + estaCompletada(progreso: ProgresoMision): boolean
        + calcularProgreso(): double
    }

    class Insignia {
        - id: Long
        - nombre: String
        - descripcion: String
        - imagenUrl: String
        - esVisible: boolean
        + toggleVisibilidad(): void
    }
}

package "Servicio Incentivos "{

    class ServicioIncentivos {
        + procesarNuevaDonacion(idDonante): void
        + procesarDonacionEntregada(idDonante): void
        + getMisionActual(donanteId: Long): ProgresoMision
        + getInsignias(donanteId: Long): List<Insignia>
        + generearRankings()
    }
}

package "Repositorios" {
    interface RepoPerfilDonante {
        + buscarPorCategoria(cat: CategoriaDonante): List<PerfilDonante>
        + buscarPorId(id: Long): PerfilDonante
        + listarTodas(): List<PerfilDonante>
    }
}

CategoriaDonante --> "*" Mision

MisionRacha           --|> Mision
MisionCompletitud     --|> Mision
MisionHabilDonador    --|> Mision
MisionDonacionesExitosas --|> Mision

Mision -->  Insignia
PerfilDonante -->  CategoriaDonante

PerfilDonante --> "*" ProgresoMision
PerfilDonante --> "*"  Insignia

ProgresoMision  -->  Mision

RankingPerfil  <--  PerfilDonante
ServicioIncentivos-->RepoPerfilDonante



RepoPerfilDonante  --> PerfilDonante

@enduml
